Initial commit for Build Inspector OSS
Signed-off-by: Jeremy Banker <loredous@loredous.net>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# Ignore everything in this directory
-*
-# Except this file
-!.gitignore
+.devcontainer
+.vscode
+.idea
+__pycache__
+.coverage
+.env
