--- a/.github/workflows/docker_image_build.yml
+++ b/.github/workflows/docker_image_build.yml
@@ -26,26 +26,19 @@ jobs:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-    - name: Build and Push Versioned Docker Image
+    - name: Build and Push Main
       id: build-and-push
-      uses: docker/build-push-action@v2
-      if: ${{ github.ref != 'refs/heads/main' }}
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-    - name: Build and Push Latest Docker Image
-      id: build-and-push-latest
       uses: docker/build-push-action@v2
       if: ${{ github.ref == 'refs/heads/main' }}
       with:
         context: .
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-        labels: ${{ steps.meta.outputs.labels }}
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
+    - name: Build and Push Tag
+      id: build-and-push
+      uses: docker/build-push-action@v2
+      if: startsWith(github.ref, 'refs/tags/v')
+      with:
+        context: .
+        push: true
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.github.ref_name }},
