--- a/.github/workflows/docker_image_build.yml
+++ b/.github/workflows/docker_image_build.yml
@@ -27,7 +27,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and Push Main
-      id: build-and-push
+      id: build-and-push-main
       uses: docker/build-push-action@v2
       if: ${{ github.ref == 'refs/heads/main' }}
       with:
@@ -35,7 +35,7 @@ jobs:
         push: true
         tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
     - name: Build and Push Tag
-      id: build-and-push
+      id: build-and-push-tags
       uses: docker/build-push-action@v2
       if: startsWith(github.ref, 'refs/tags/v')
       with:
