--- a/.github/workflows/docker_image_build.yml
+++ b/.github/workflows/docker_image_build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build and Push Main
       id: build-and-push-main
       uses: docker/build-push-action@v2
-      if: ${{ github.ref == 'refs/heads/main' }}
+      if: ${{ github.ref == 'refs/heads/main' }} || startsWith(github.ref_name, 'build/')
       with:
         context: .
         push: true
