fix invalid ref format
Signed-off-by: Jeremy Banker <jeremyb@vmware.com>

--- a/.github/workflows/docker_image_build.yml
+++ b/.github/workflows/docker_image_build.yml
@@ -9,7 +9,7 @@ on:
       - 'v*'
 
 env:
-  REGISTRY: projects.registry.vmware.com/build_inspector/
+  REGISTRY: projects.registry.vmware.com/build_inspector
   IMAGE_NAME: build-inspector
 
 jobs:
