--- a/.github/workflows/docker_image_build.yml
+++ b/.github/workflows/docker_image_build.yml
@@ -9,7 +9,8 @@ on:
       - 'v*'
 
 env:
-  REGISTRY: projects.registry.vmware.com/build_inspector
+  REGISTRY: projects.registry.vmware.com
+  PROJECT: build_inspector
   IMAGE_NAME: build-inspector
 
 jobs:
@@ -33,7 +34,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
+        tags: ${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
     - name: Build and Push Tag
       id: build-and-push-tags
       uses: docker/build-push-action@v2
@@ -41,4 +42,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.github.ref_name }},
+        tags: ${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:${{ github.github.ref_name }},
