correct image name
Signed-off-by: Jeremy Banker <jeremyb@vmware.com>

--- a/.github/workflows/docker_image_build.yml
+++ b/.github/workflows/docker_image_build.yml
@@ -11,7 +11,7 @@ on:
 env:
   REGISTRY: projects.registry.vmware.com
   PROJECT: build_inspector
-  IMAGE_NAME: build-inspector
+  IMAGE_NAME: build_inspector
 
 jobs:
 
