--- a/.github/workflows/docker_image_build.yml
+++ b/.github/workflows/docker_image_build.yml
@@ -25,7 +25,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{ secrets.HARBOR_USER }}
+        username: "${{ secrets.HARBOR_USER }}"
         password: ${{ secrets.HARBOR_TOKEN }}
     - name: Build and Push Main
       id: build-and-push-main
@@ -34,7 +34,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
+        tags: ${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
     - name: Build and Push Tag
       id: build-and-push-tags
       uses: docker/build-push-action@v2
@@ -42,4 +42,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:${{ github.github.ref_name }},
+        tags: ${{ env.REGISTRY }}/${{ env.PROJECT}}/${{ env.IMAGE_NAME }}:${{ github.github.ref_name }},
