add https to registry
Signed-off-by: Jeremy Banker <jeremyb@vmware.com>

--- a/.github/workflows/docker_image_build.yml
+++ b/.github/workflows/docker_image_build.yml
@@ -9,7 +9,7 @@ on:
       - 'v*'
 
 env:
-  REGISTRY: projects.registry.vmware.com
+  REGISTRY: https://projects.registry.vmware.com
   PROJECT: build_inspector
   IMAGE_NAME: build_inspector
 
