--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r code/requirements.txt
-          pip install -r tests/requirements.tx
+          pip install -r tests/requirements.txt
       - name: Test with pytest
         run: |
           pytest -v --disable-warnings --cov=./code/ --cov-report=term-missing tests/unit_tests
