--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -3,7 +3,7 @@ fastapi>=0.65.2
 h11==0.12.0
 pydantic==1.8.2
 starlette==0.25.0
-typing-extensions==3.7.4.3
+typing-extensions>=3.10.0
 uvicorn==0.13.4
 yara-python==4.0.5
 spdx-tools==0.6.1
