--- a/.github/workflows/docker_image_build.yml
+++ b/.github/workflows/docker_image_build.yml
@@ -7,7 +7,7 @@ name: Publish Docker Image
 
 on:
   push:
-    branches: [ "main" , "build/"]
+    branches: [ "main" , "build/*"]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
