adjust wget parser for improved performance
Signed-off-by: Jeremy Banker <jeremyb@vmware.com>

--- a/tests/automated_functional_test/test_configs/wget.yml
+++ b/tests/automated_functional_test/test_configs/wget.yml
@@ -364,13 +364,13 @@ config:
   expected_dependencies:
     - type: wget
       name:  latest.zip
-      version: https://wordpress.org/latest.zip
-      download_location: 198.143.164.252
+      version: unknown
+      download_location: https://wordpress.org/latest.zip
     - type: wget
       name:  wordpress-install.zip
-      version: https://wordpress.org/latest.zip
-      download_location: 198.143.164.252
+      version: unknown
+      download_location: https://wordpress.org/latest.zip
     - type: wget
       name:  wordpress-install-docker-linux.zip
-      version: https://wordpress.org/latest.zip
-      download_location: 198.143.164.252
+      version: unknown
+      download_location: https://wordpress.org/latest.zip
