--- a/tests/automated_functional_test/test_configs/curl.yml
+++ b/tests/automated_functional_test/test_configs/curl.yml
@@ -23,12 +23,12 @@ config:
     - type: curl
       name:  httpstat.us/400
       version: Unknown
-      extraction_source: curl https://httpstat.us/400
+      extraction_source: curl https://httpstat.us/400 -f
       download_location: https://httpstat.us/400
     - type: curl
       name:  executable.sh
       version: Unknown
-      extraction_source: curl http://executable.sh
+      extraction_source: curl http://executable.sh | bash
       download_location: http://executable.sh
     - type: curl
       name:  user@host/foo/bar.txt
@@ -38,11 +38,11 @@ config:
     - type: curl
       name:  helloworld.com
       version: Unknown
-      extraction_source: curl www.helloworld.com
+      extraction_source: curl www.helloworld.com > test.file
       download_location: www.helloworld.com
     - type: curl
       name:  packagecloud.io/install/repositories/github/git-lfs/script.deb.sh
       version: Unknown
-      extraction_source: RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh
+      extraction_source: RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash
       download_location: https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh
 
