--- a/.github/workflows/functional-tests.yml
+++ b/.github/workflows/functional-tests.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r code/requirements.txt
+          pip install -r tests/requirements.txt
           pip install -r tests/automated_functional_test/test_requirements.txt
       - name: Run functional tests
         run: |
