--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -3,7 +3,7 @@ fastapi>=0.88.0
 h11>=0.12.0
 pydantic==1.8.2
 starlette==0.27.0
-typing-extensions>=3.10.0
+typing-extensions==4.8.0
 uvicorn==0.13.4
 yara-python==4.0.5
 spdx-tools==0.6.1
